--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": ".",
   "browserslist": {
     "production": [
       ">0.2%",
